Keep compose ports in line with app port

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,11 @@ services:
     web:
         build: .
         ports:
-            - "80:80"
+            - "8000:8000"
         volumes:
             - .:/code
         depends_on:
             - db
+        image: tpopp/web
     db:
         image: postgres
