Views cleanup and show more data

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "url": "git+https://github.com/comprodb/cs373-idb.git"
   },
   "dependencies": {
+    "moment": "^2.12.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-router": "^2.0.1",
