--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,6 @@ services:
             - .:/code
         depends_on:
             - db
+        command: ['sh', '-c', '(python app.py; npm run dev)']
     db:
         image: postgres
