--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
     web:
-        build: .
+        image: rmlynch/comprodb
         ports:
             - 80:8000
         depends_on:
